Fixed layout bugs on chrome regarding height property

--- a/src/components/BookCard/BookCard.module.scss
+++ b/src/components/BookCard/BookCard.module.scss
@@ -14,7 +14,6 @@
 
   .thumbnail {
     height: 40%;
-    max-height: 40%;
     margin: 0.5rem auto;
     box-shadow: 1px 1px 3px #888;
   }
