--- a/src/components/ResultViewer/ResultViewer.module.scss
+++ b/src/components/ResultViewer/ResultViewer.module.scss
@@ -1,5 +1,5 @@
 .container {
-  height: 100%;
+  height: auto;
   overflow-y: scroll;
 }
 
